# PodmanSocketProxy

./: Cargo.toml  ContainerFile  README.md  config.toml  test.toml
config-examples/: traefik.toml
src/: cli.rs  client.rs  config.rs  errors.rs  filter.rs  main.rs  proxy.rs  responses.rs
src/errors/: connect_podman_error.rs  open_protected_error.rs  read_complete_error.rs
src/proxy/: client.rs  tcp.rs  unix.rs
