[package]
name = "podman-socket-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
httparse = "1.9.5"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
