[package]
name = "podman-socket-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.44"
httparse = "1.9.5"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
